--- a/estimatesOfLocation.ipynb
+++ b/estimatesOfLocation.ipynb
@@ -206,7 +206,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "import csv\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
