--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -75,7 +75,9 @@
      ]
     }
    ],
-   "source": [],
+   "source": [
+    "pip install numpy"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
