Trabajando con arrays en Numpy

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -340,6 +340,731 @@
    ],
    "source": [
     "np.linspace(0,1,5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Aleatoriedad"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "np.random.seed(0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "bool_\n",
+    "\n",
+    "Boolean (True or False) stored as a byte\n",
+    "\n",
+    "int_\n",
+    "\n",
+    "Default integer type (same as C long; normally either int64 or int32)\n",
+    "\n",
+    "intc\n",
+    "\n",
+    "Identical to C int (normally int32 or int64)\n",
+    "\n",
+    "intp\n",
+    "\n",
+    "Integer used for indexing (same as C ssize_t; normally either int32 or int64)\n",
+    "\n",
+    "int8\n",
+    "\n",
+    "Byte (–128 to 127)\n",
+    "\n",
+    "int16\n",
+    "\n",
+    "Integer (–32768 to 32767)\n",
+    "\n",
+    "int32\n",
+    "\n",
+    "Integer (–2147483648 to 2147483647)\n",
+    "\n",
+    "int64\n",
+    "\n",
+    "Integer (–9223372036854775808 to 9223372036854775807)\n",
+    "\n",
+    "uint8\n",
+    "\n",
+    "Unsigned integer (0 to 255)\n",
+    "\n",
+    "uint16\n",
+    "\n",
+    "Unsigned integer (0 to 65535)\n",
+    "\n",
+    "uint32\n",
+    "\n",
+    "Unsigned integer (0 to 4294967295)\n",
+    "\n",
+    "uint64\n",
+    "\n",
+    "Unsigned integer (0 to 18446744073709551615)\n",
+    "\n",
+    "float_\n",
+    "\n",
+    "Shorthand for float64\n",
+    "\n",
+    "float16\n",
+    "\n",
+    "Half-precision float: sign bit, 5 bits exponent, 10 bits mantissa\n",
+    "\n",
+    "float32\n",
+    "\n",
+    "Single-precision float: sign bit, 8 bits exponent, 23 bits mantissa\n",
+    "\n",
+    "float64\n",
+    "\n",
+    "Double-precision float: sign bit, 11 bits exponent, 52 bits mantissa\n",
+    "\n",
+    "complex_\n",
+    "\n",
+    "Shorthand for complex128\n",
+    "\n",
+    "complex64\n",
+    "\n",
+    "Complex number, represented by two 32-bit floats\n",
+    "\n",
+    "complex128\n",
+    "\n",
+    "Complex number, represented by two 64-bit floats"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## One-dimensional array"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([8, 8, 1, 6, 7, 7])"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1 = np.random.randint(10,size=6) # muestra de 6 elementos\n",
+    "x1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "6"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1[3]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[8, 1, 5, 9],\n       [8, 9, 4, 3],\n       [0, 3, 5, 0]])"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2 = np.random.randint(10,size=(3,4)) # Matriz o Two dimensional array\n",
+    "x2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x2[1][2])\n",
+    "print(x2[1,2])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[[5, 9, 3, 0, 5],\n        [0, 1, 2, 4, 2],\n        [0, 3, 2, 0, 7],\n        [5, 9, 0, 2, 7]],\n\n       [[2, 9, 2, 3, 3],\n        [2, 3, 4, 1, 2],\n        [9, 1, 4, 6, 8],\n        [2, 3, 0, 0, 6]],\n\n       [[0, 6, 3, 3, 8],\n        [8, 8, 2, 3, 2],\n        [0, 8, 8, 3, 8],\n        [2, 8, 4, 3, 0]]])"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x3 = np.random.randint(10,size=(3,4,5)) # Three dimensional array\n",
+    "x3"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x3 numero dimensiones 3\n",
+      "x3 shape (3, 4, 5)\n",
+      "x3 size 60\n",
+      "x3 type int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"x3 numero dimensiones\",x3.ndim)\n",
+    "print(\"x3 shape\",x3.shape)\n",
+    "print(\"x3 size\",x3.size)\n",
+    "print(\"x3 type\",x3.dtype)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x3[0][3][1])\n",
+    "print(x3[0,3,1])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "x3[0,3,1] = 5.5"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "5"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x3[0,3,1]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "nuevo_arreglo = np.arange(10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([3, 4, 5])"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevo_arreglo[3:6]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1, 4, 7])"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevo_arreglo[1::2] # Posiciones de 3 en 3"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([9, 8, 7, 6, 5, 4, 3, 2, 1, 0])"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevo_arreglo[::-1]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([5, 3, 1])"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevo_arreglo[5::-2] # Desde la posicion 5, disminuye de 2 en 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[8, 1, 5],\n       [8, 9, 4],\n       [0, 3, 5]])"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2[:3,:3]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[[5, 9, 3],\n        [0, 1, 2],\n        [0, 3, 2]],\n\n       [[2, 9, 2],\n        [2, 3, 4],\n        [9, 1, 4]],\n\n       [[0, 6, 3],\n        [8, 8, 2],\n        [0, 8, 8]]])"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x3[:3,:3,:3]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([8, 8, 0])"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#obteniendo la primer columa\n",
+    "x2[:,0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[8, 1, 5, 9],\n       [8, 9, 4, 3],\n       [0, 3, 5, 0]])"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([9, 3, 0])"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Obteniendo la tercer columa\n",
+    "x2[:,3]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([8, 1, 5, 9])"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2[0] # x2[0,:]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Sub-arreglos no generan copias de la información, generan vistas"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[[5, 9, 3],\n        [0, 1, 2],\n        [0, 3, 2]],\n\n       [[2, 9, 2],\n        [2, 3, 4],\n        [9, 1, 4]],\n\n       [[0, 6, 3],\n        [8, 8, 2],\n        [0, 8, 8]]])"
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Generando una copia\n",
+    "x3_sub_copia = x3[:3,:3,:3].copy()\n",
+    "x3_sub_copia"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[[15,  9,  3,  0,  5],\n        [ 0,  1,  2,  4,  2],\n        [ 0,  3,  2,  0,  7],\n        [ 5,  5,  0,  2,  7]],\n\n       [[ 2,  9,  2,  3,  3],\n        [ 2,  3,  4,  1,  2],\n        [ 9,  1,  4,  6,  8],\n        [ 2,  3,  0,  0,  6]],\n\n       [[ 0,  6,  3,  3,  8],\n        [ 8,  8,  2,  3,  2],\n        [ 0,  8,  8,  3,  8],\n        [ 2,  8,  4,  3,  0]]])"
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x3_sub = x3[:3,:3,:3]\n",
+    "x3_sub[0,0,0] = 15\n",
+    "x3"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Reshaping of arrays"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[1, 2, 3],\n       [4, 5, 6],\n       [7, 8, 9]])"
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# El numero de elementos a reformar debe coincidir con la forma\n",
+    "# Por ejemplo: 9 -> 3x3\n",
+    "grid = np.arange(1,10).reshape((3,3))\n",
+    "grid"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[1, 2, 3]])"
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_array = np.array([1,2,3])\n",
+    "x_array.reshape((1,3))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1, 2, 3])"
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_array"
    ],
    "metadata": {
     "collapsed": false,
