Array concatenation, splitting y vectorized operationes

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "array('i', [0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -101,13 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "array([1, 2, 3, 4, 5])"
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,13 +125,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "array([4.5, 1. , 2. , 3. , 4. , 5. ])"
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,13 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "array([4, 1, 2, 3, 4, 5])"
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,13 +173,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[1, 2, 3],\n       [4, 5, 6],\n       [7, 8, 9]])"
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,13 +197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,13 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[1., 1., 1., 1., 1.],\n       [1., 1., 1., 1., 1.],\n       [1., 1., 1., 1., 1.]])"
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,13 +256,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[3.14, 3.14],\n       [3.14, 3.14]])"
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,13 +292,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
       "text/plain": "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18])"
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,13 +327,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
       "text/plain": "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "np.random.seed(0)"
@@ -474,13 +474,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([8, 8, 1, 6, 7, 7])"
+      "text/plain": "array([5, 0, 3, 3, 7, 9])"
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,13 +498,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
-      "text/plain": "6"
+      "text/plain": "3"
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,13 +521,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[8, 1, 5, 9],\n       [8, 9, 4, 3],\n       [0, 3, 5, 0]])"
+      "text/plain": "array([[3, 5, 2, 4],\n       [7, 6, 8, 8],\n       [1, 6, 7, 7]])"
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,8 +551,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "4\n"
+      "8\n",
+      "8\n"
      ]
     }
    ],
@@ -569,13 +569,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[[5, 9, 3, 0, 5],\n        [0, 1, 2, 4, 2],\n        [0, 3, 2, 0, 7],\n        [5, 9, 0, 2, 7]],\n\n       [[2, 9, 2, 3, 3],\n        [2, 3, 4, 1, 2],\n        [9, 1, 4, 6, 8],\n        [2, 3, 0, 0, 6]],\n\n       [[0, 6, 3, 3, 8],\n        [8, 8, 2, 3, 2],\n        [0, 8, 8, 3, 8],\n        [2, 8, 4, 3, 0]]])"
+      "text/plain": "array([[[8, 1, 5, 9, 8],\n        [9, 4, 3, 0, 3],\n        [5, 0, 2, 3, 8],\n        [1, 3, 3, 3, 7]],\n\n       [[0, 1, 9, 9, 0],\n        [4, 7, 3, 2, 7],\n        [2, 0, 0, 4, 5],\n        [5, 6, 8, 4, 1]],\n\n       [[4, 9, 8, 1, 1],\n        [7, 9, 9, 3, 6],\n        [7, 2, 0, 3, 5],\n        [9, 4, 4, 6, 4]]])"
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -621,14 +621,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n",
-      "9\n"
+      "3\n",
+      "3\n"
      ]
     }
    ],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "x3[0,3,1] = 5.5"
@@ -659,13 +659,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
       "text/plain": "5"
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "nuevo_arreglo = np.arange(10)"
@@ -696,13 +696,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
       "text/plain": "array([3, 4, 5])"
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,13 +719,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([1, 4, 7])"
+      "text/plain": "array([1, 3, 5, 7, 9])"
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,13 +742,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "outputs": [
     {
      "data": {
       "text/plain": "array([9, 8, 7, 6, 5, 4, 3, 2, 1, 0])"
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,13 +765,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "outputs": [
     {
      "data": {
       "text/plain": "array([5, 3, 1])"
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,13 +788,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[8, 1, 5],\n       [8, 9, 4],\n       [0, 3, 5]])"
+      "text/plain": "array([[3, 5, 2],\n       [7, 6, 8],\n       [1, 6, 7]])"
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,13 +811,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[[5, 9, 3],\n        [0, 1, 2],\n        [0, 3, 2]],\n\n       [[2, 9, 2],\n        [2, 3, 4],\n        [9, 1, 4]],\n\n       [[0, 6, 3],\n        [8, 8, 2],\n        [0, 8, 8]]])"
+      "text/plain": "array([[[8, 1, 5],\n        [9, 4, 3],\n        [5, 0, 2]],\n\n       [[0, 1, 9],\n        [4, 7, 3],\n        [2, 0, 0]],\n\n       [[4, 9, 8],\n        [7, 9, 9],\n        [7, 2, 0]]])"
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,13 +834,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([8, 8, 0])"
+      "text/plain": "array([3, 7, 1])"
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,13 +858,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[8, 1, 5, 9],\n       [8, 9, 4, 3],\n       [0, 3, 5, 0]])"
+      "text/plain": "array([[3, 5, 2, 4],\n       [7, 6, 8, 8],\n       [1, 6, 7, 7]])"
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,13 +881,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([9, 3, 0])"
+      "text/plain": "array([4, 8, 7])"
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,13 +905,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([8, 1, 5, 9])"
+      "text/plain": "array([3, 5, 2, 4])"
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,13 +940,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[[5, 9, 3],\n        [0, 1, 2],\n        [0, 3, 2]],\n\n       [[2, 9, 2],\n        [2, 3, 4],\n        [9, 1, 4]],\n\n       [[0, 6, 3],\n        [8, 8, 2],\n        [0, 8, 8]]])"
+      "text/plain": "array([[[8, 1, 5],\n        [9, 4, 3],\n        [5, 0, 2]],\n\n       [[0, 1, 9],\n        [4, 7, 3],\n        [2, 0, 0]],\n\n       [[4, 9, 8],\n        [7, 9, 9],\n        [7, 2, 0]]])"
      },
-     "execution_count": 39,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,13 +965,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[[15,  9,  3,  0,  5],\n        [ 0,  1,  2,  4,  2],\n        [ 0,  3,  2,  0,  7],\n        [ 5,  5,  0,  2,  7]],\n\n       [[ 2,  9,  2,  3,  3],\n        [ 2,  3,  4,  1,  2],\n        [ 9,  1,  4,  6,  8],\n        [ 2,  3,  0,  0,  6]],\n\n       [[ 0,  6,  3,  3,  8],\n        [ 8,  8,  2,  3,  2],\n        [ 0,  8,  8,  3,  8],\n        [ 2,  8,  4,  3,  0]]])"
+      "text/plain": "array([[[15,  1,  5,  9,  8],\n        [ 9,  4,  3,  0,  3],\n        [ 5,  0,  2,  3,  8],\n        [ 1,  5,  3,  3,  7]],\n\n       [[ 0,  1,  9,  9,  0],\n        [ 4,  7,  3,  2,  7],\n        [ 2,  0,  0,  4,  5],\n        [ 5,  6,  8,  4,  1]],\n\n       [[ 4,  9,  8,  1,  1],\n        [ 7,  9,  9,  3,  6],\n        [ 7,  2,  0,  3,  5],\n        [ 9,  4,  4,  6,  4]]])"
      },
-     "execution_count": 40,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,13 +1002,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[1, 2, 3],\n       [4, 5, 6],\n       [7, 8, 9]])"
      },
-     "execution_count": 46,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,13 +1028,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[1, 2, 3]])"
      },
-     "execution_count": 47,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,13 +1052,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "outputs": [
     {
      "data": {
       "text/plain": "array([1, 2, 3])"
      },
-     "execution_count": 48,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,6 +1070,18 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Array concatenation and splitting"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
